--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="py-8 px-8 max-w-sm mx-auto bg-white rounded-xl shadow-lg space-y-2 sm:py-4 sm:flex sm:items-center sm:space-y-0 sm:space-x-6">
-    <img class="block mx-auto h-24 rounded-full sm:mx-0 sm:shrink-0" src="/asset/img/my.jpg" alt="Man's Face">
+    <img class="block mx-auto h-24 rounded-full sm:mx-0 sm:shrink-0" src="/src/asset/img/my.jpg" alt="Man's Face">
     <div class="text-center space-y-2 sm:text-left">
       <div class="space-y-0.5">
         <p class="text-lg text-black font-semibold">
