--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <link href="/dist/output.css" rel="stylesheet">
   <title>Tailwind CSS</title>
 </head>
-<body>
+<body class=" bg-gray-900">
   <div class="py-8 px-8 max-w-sm mx-auto bg-white rounded-xl shadow-lg space-y-2 sm:py-4 sm:flex sm:items-center sm:space-y-0 sm:space-x-6">
     <img class="block mx-auto h-24 rounded-full sm:mx-0 sm:shrink-0" src="/src/asset/img/my.jpg" alt="Man's Face">
     <div class="text-center space-y-2 sm:text-left">
